--- a/PMS-PropertyHapa/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Tenant/Index.cshtml
@@ -5,48 +5,73 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-
 <div class="page-body">
-    <h1>Tenants</h1>
-    <a href="/Tenant/AddTenant" class="btn btn-success mb-3">Add New Tenant</a>
-
-    <div class="table-responsive">
-        <table id="tenantsTable" class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Email Address</th>
-                    <th>Phone Number</th>
-                    <th>Emergency Contact Info</th>
-                    <th>Lease Agreement Id</th>
-                    <th>Tenant Nationality</th>
-                    <th>Gender</th>
-                    <th>DOB</th>
-                    <th>VAT</th>
-                    <th>Legal Name</th>
-                    <th>Account Name</th>
-                    <th>Account Holder</th>
-                    <th>Account IBAN</th>
-                    <th>Account Swift</th>
-                    <th>Account Bank</th>
-                    <th>Account Currency</th>
-                    <th>Address</th>
-                    <th>Address2</th>
-                    <th>Locality</th>
-                    <th>Region</th>
-                    <th>Postal Code</th>
-                    <th>Country</th>
-                    <th>Country Code</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
+    <div class="container-fluid">
+        <div class="page-title">
+            <div class="row">
+                <div class="col-12">
+                    <h3>Roles List</h3>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item">Dashboard</li>
+                        <li class="breadcrumb-item active">Roles</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4 class="card-title">
+                            <a href="/Tenant/AddTenant" class="btn btn-success mb-3">Add New Tenant</a>
+                        </h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table" id="grouproles">
+                                <thead>
+                                    <tr>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th>Email Address</th>
+                                        <th>Phone Number</th>
+                                        <th>Emergency Contact Info</th>
+                                        <th>Lease Agreement Id</th>
+                                        <th>Tenant Nationality</th>
+                                        <th>Gender</th>
+                                        <th>DOB</th>
+                                        <th>VAT</th>
+                                        <th>Legal Name</th>
+                                        <th>Account Name</th>
+                                        <th>Account Holder</th>
+                                        <th>Account IBAN</th>
+                                        <th>Account Swift</th>
+                                        <th>Account Bank</th>
+                                        <th>Account Currency</th>
+                                        <th>Address</th>
+                                        <th>Address2</th>
+                                        <th>Locality</th>
+                                        <th>Region</th>
+                                        <th>Postal Code</th>
+                                        <th>Country</th>
+                                        <th>Country Code</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
@@ -54,7 +79,7 @@
     $(document).ready(function () {
         var tenantId = localStorage.getItem('userId');
         var ajaxUrl = `/Tenant/GetTenant/?tenantId=${encodeURIComponent(tenantId)}`;
-        $('#tenantsTable').DataTable({
+        $('#grouproles').DataTable({
             "ajax": {
                 "url": ajaxUrl,
                 "type": "GET",
@@ -102,7 +127,7 @@
             },
             "initComplete": function () {
 
-                $('#tenantsTable thead th').css("min-width", "100px");
+                $('#grouproles thead th').css("min-width", "100px");
             },
             "order": [] 
         });
@@ -112,7 +137,7 @@
         window.location.href = `/Tenant/AddTenant?tenantId=${tenantId}`;
     }
 
-    $('#tenantsTable').on('click', '.delete-tenant', function () {
+    $('#grouproles').on('click', '.delete-tenant', function () {
         var tenantId = $(this).data('tenant-id');
         deleteTenant(tenantId);
     });
@@ -138,7 +163,7 @@
                     type: 'DELETE',
                     success: function (data) {
                         if (data.success) {
-                            $('#tenantsTable').DataTable().ajax.reload();
+                            $('#grouproles').DataTable().ajax.reload();
                             Swal.fire(
                                 'Deleted!',
                                 'Your file has been deleted.',
